# gas6-latsi-ty

./: .gitlab-ci.yml  LisezMoi.txt  README.md  dune-project  latsi.opam
.github/workflows/: format.yml  test.yml
latsi_programs/: sialors_simple  sousroutine_nested  sousroutine_recursive
lib/: ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  lexer.mli  lexer.mll  parser.mly  token.ml  token.mli
lib/latsi/: interpreter.ml  interpreter.mli
lib/latsi_extension/: ast.ml  ast.mli  dune  interpreter.ml  interpreter.mli  lexer.mll  parser.mly  token.ml
test/: dune  test_interpreter.ml  test_lexer.ml  test_parser.ml  utils.ml
test/expect-tests/: dune  example.ml  test_imprime.ml  test_nl.ml
test_extension/: dune  test_interpreter.ml  test_lexer.ml  test_parser.ml  utils.ml
test_extension/expect-tests/: dune  test_nl.ml  utils.ml
test_latsi/: dune  test_interpreter.ml  utils.ml
test_latsi/expect-tests/: dune  test_imprime.ml  test_program.ml  utils.ml
